--- a/Huế travel/html/index-stayp-1.html
+++ b/Huế travel/html/index-stayp-1.html
@@ -429,6 +429,15 @@
                                 </div>
                                 <h3>Trọn gói giá cực rẻ!!!</h3>
                             </a>
+                            <!-- __________5___________ -->
+
+                            <a href="index-tour.html">
+                                <div class="quangcao-box">
+                                    <img src="../img/qc5.jpg" alt="qc5">
+                                </div>
+                                <h3> Tour cho gia đình !!!</h3>
+                            </a>
+
 
 
                         </div>
@@ -479,10 +488,14 @@
 
 
                             </div>
+                            <div class="map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9100.399586729125!2d107.59172439369152!3d16.46304157495743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a13e8e5086cd%3A0x29b071e336759b51!2sVinpearl%20Hotel%20Hu%E1%BA%BF!5e0!3m2!1sen!2s!4v1617871467305!5m2!1sen!2s"
+                                    width="100%" height="440" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            </div>
 
                         </div>
 
-                        <div class="more">
+                        <div class="more mgt-24">
                             <a href="index-stayp.html">Trở về</a>
                         </div>
 
